--- a/photomap/.gitignore
+++ b/photomap/.gitignore
@@ -11,6 +11,9 @@ node_modules
 dist
 dist-ssr
 *.local
+.firebase
+firestore.indexes.json
+firestore.rules
 
 # Editor directories and files
 .vscode/*
